force-app/main/default/objects/Invoice_Detail__c/fields/Bill_Amount_Currency__c.field-meta.xml
<CustomField>
    <fullName>Bill_Amount_Currency__c</fullName>
    <formula>Bill_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill Amount(Currency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>