force-app/main/default/objects/Invoice_Detail__c/fields/Invoice_Detail_Section__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Detail_Section__c</fullName>
    <formula>Name &amp; &apos;, &apos; &amp; Project__r.Name &amp; TE_Material__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Detail Section</label>
    <type>Text</type>
</CustomField>