force-app/main/default/objects/Invoice_Detail__c/fields/Invoice_Line_No_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Line_No_Legacy__c</fullName>
    <externalId>true</externalId>
    <label>Invoice Line No Legacy</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>