force-app/main/default/objects/Invoice_Detail__c/fields/Is_Project_Billed_Separately__c.field-meta.xml
<CustomField>
    <fullName>Is_Project_Billed_Separately__c</fullName>
    <formula>Project__r.Billed_Separately__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Project Billed Separately?</label>
    <type>Checkbox</type>
</CustomField>