force-app/main/default/objects/Invoice_Detail__c/fields/Material_Price_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Material_Price_Per_Unit__c</fullName>
    <label>Material Price Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>