force-app/main/default/objects/Invoice_Detail__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>inov8__PMT_Project__c</referenceTo>
    <relationshipLabel>Invoice Details</relationshipLabel>
    <relationshipName>Invoice_Details</relationshipName>
    <type>Lookup</type>
</CustomField>