force-app/main/default/objects/Invoice_Detail__c/fields/Show_in_Summary__c.field-meta.xml
<CustomField>
    <fullName>Show_in_Summary__c</fullName>
    <label>Show in Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>