force-app/main/default/objects/Invoice_Detail__c/fields/TE_Material__c.field-meta.xml
<CustomField>
    <fullName>TE_Material__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TE Material</label>
    <referenceTo>TE_Material__c</referenceTo>
    <relationshipLabel>Invoice Details</relationshipLabel>
    <relationshipName>Invoice_Details</relationshipName>
    <type>Lookup</type>
</CustomField>